tests/e2e/type_assignment_map_list.error
Error: syntax error in story at line 1, column 5

1|    a = {} to List[List[string]]
          ^^^^^^^^^^^^^^^^^^^^^^

E0126: Type casting not supported from `Map[any,any]` to `List[List[string]]`.
